syntax = "proto3";

package bluk.games;

message GameCluster {
  string url = 1;
};